--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,36 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
+node_modules/
+
 # vendor/
 
 # Go workspace file
 go.work
+
+# Chain
+data
+tmp
+.env
+
+# yarn v2
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
+
+# hardhat
+cache
+artifacts
+typechain
+typechain-types
+deployments
+
+# Mac
+.DS_Store
+
+# Custom
+note.md
+.envrc
+sandbox
